Bug 465786 - When opening a folder via Dolphin, the Projects panel is not opened
Summary: When opening a folder via Dolphin, the Projects panel is not opened
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-15 19:26 UTC by Oliver Beard
Modified: 2023-03-25 19:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Beard 2023-02-15 19:26:32 UTC
SUMMARY
When opening a folder with Kate via Dolphin, the Projects panel is not opened by default. When you use the "Open Folder..." button on the landing page, however, it is.

STEPS TO REPRODUCE
1. Right click on a folder in Dolphin, and then select "Open Folder With" > "Kate"

OBSERVED RESULT
The Projects panel is not opened for you. As such, there is no indication that the folder has actually been opened.

EXPECTED RESULT
As with the "Open Folder..." button on the Welcome page, the Projects panel is opened.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Christoph Cullmann 2023-03-25 19:12:21 UTC
Git commit 8f350a558f7928614542ef12b5a9fe800a2b5c2e by Christoph Cullmann.
Committed on 25/03/2023 at 19:12.
Pushed by cullmann into branch 'master'.

ensure projects view is focused

M  +6    -1    addons/project/kateprojectplugin.cpp
M  +0    -7    addons/project/kateprojectplugin.h
M  +17   -17   addons/project/kateprojectpluginview.cpp
M  +10   -5    addons/project/kateprojectpluginview.h

https://invent.kde.org/utilities/kate/commit/8f350a558f7928614542ef12b5a9fe800a2b5c2e