ensure projects view is focused

BUG: 465786